--- a/index.html
+++ b/index.html
@@ -17,6 +17,59 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <main class="container">
+      <div class="top-container">
+        <div class="top-left">
+          <h1>10,000+ of our users love our products.</h1>
+          <p>
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
+          </p>
+        </div>
+        <div class="top-right">
+          <div class="star star-one">
+            <div class="star-img">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
+            <div class="star-text">
+              <h5>Rated 5 Stars in Reviews</h5>
+            </div>
+          </div>
+          <div class="star star-two">
+            <div class="star-img">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
+            <div class="star-text">
+              <h5>Rated 5 Stars in Report Guru</h5>
+            </div>
+          </div>
+          <div class="star start-three">
+            <div class="star-img">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
+            <div class="star-text">
+              <h5>Rated 5 Stars in BestTech</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-container">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
+    </main>
   </body>
 </html>
