--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <main class="container">
+
       <div class="top-container">
         <div class="top-left">
           <h1>10,000+ of our users love our products.</h1>
@@ -65,11 +66,65 @@
           </div>
         </div>
       </div>
+
       <div class="bottom-container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+
+        <div class="card card-one">
+          <div class="card-profile">
+            <img src="images/image-colton.jpg" alt="">
+            <div class="card-profile-text">
+              <h5>Colton Smith</h5>
+              <span>Verified Buyer</span>
+            </div>
+          </div>
+          <div class="card-text">
+            <p>
+              "We needed the same printed design as the one we had ordered a week prior.
+              Not only did they find the original order, but we also received it in time.
+              Excellent!"
+            </p>
+          </div>
+        </div>
+
+        <div class="card card-two">
+          <div class="card-profile">
+            <img src="images/image-irene.jpg" alt="">
+            <div class="card-profile-text">
+              <h5>Irene Roberts </h5>
+              <span>Verified Buyer</span>
+            </div>
+          </div>
+          <div class="card-text">
+            <p>
+              "Customer service is always excellent and very quick turn around. Completely
+              delighted with the simplicity of the purchase and the speed of delivery."
+            </p>
+          </div>
+        </div>
+
+        <div class="card card-three">
+          <div class="card-profile">
+            <img src="images/image-anne.jpg" alt="">
+            <div class="card-profile-text">
+              <h5>Anne Wallace</h5>
+              <span>Verified Buyer</span>
+            </div>
+          </div>
+          <div class="card-text">
+            <p>
+              "Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"
+            </p>
+          </div>
+        </div>
+
       </div>
     </main>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      >Frontend Mentor</a
+      >. Coded by <a href="https://codingwolf-at.github.io">Atul Tameshwari</a>.
+    </div>
   </body>
 </html>
