--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             See what our satisfied customers are saying about our services.
           </p>
         </div>
-        <div class="top-right">
+        <!-- <div class="top-right">
           <div class="star star-one">
             <div class="star-img">
               <img src="images/icon-star.svg" alt="">
@@ -116,7 +116,7 @@
               standard. Will definitely use them again and recommend them to everyone!"
             </p>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </main>
